import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import { governanceServiceDefinition } from './governance-service';

/**
 * gRPC Server Setup and Configuration
 * Manages all gRPC services for the DAC Marketplace platform
 */
export class GRPCServer {
  private server: grpc.Server;
  private port: number;

  constructor(port: number = 50051) {
    this.server = new grpc.Server();
    this.port = port;
  }

  /**
   * Initialize and start the gRPC server
   */
  async start() {
    try {
      // Load protobuf definitions
      await this.loadServices();
      
      // Configure server binding
      const serverAddress = `0.0.0.0:${this.port}`;
      
      return new Promise<void>((resolve, reject) => {
        this.server.bindAsync(
          serverAddress,
          grpc.ServerCredentials.createInsecure(),
          (error, boundPort) => {
            if (error) {
              console.error('Failed to bind gRPC server:', error);
              reject(error);
              return;
            }

            this.server.start();
            console.log(`gRPC server running on port ${boundPort}`);
            console.log('Available services:');
            console.log('- GovernanceService (Proposals, Voting, Delegations)');
            console.log('- AIService (Property Analysis, Review Processing)');
            console.log('- BlockchainService (Smart Contracts, Transactions)');
            console.log('- PropertyService (Listings, Tokenization, Valuations)');
            console.log('- AuthService (Authentication, Authorization)');
            console.log('- SocialService (Profiles, Messaging, Endorsements)');
            
            resolve();
          }
        );
      });
    } catch (error) {
      console.error('Error starting gRPC server:', error);
      throw error;
    }
  }

  /**
   * Load and register all gRPC services
   */
  private async loadServices() {
    const protoPath = path.join(process.cwd(), 'proto');

    // Load Governance Service
    const governancePackageDefinition = protoLoader.loadSync(
      path.join(protoPath, 'governance.proto'),
      {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
      }
    );
    const governanceProto = grpc.loadPackageDefinition(governancePackageDefinition) as any;
    
    this.server.addService(
      governanceProto.dac.governance.GovernanceService.service,
      governanceServiceDefinition
    );

    // Load AI Services
    const aiPackageDefinition = protoLoader.loadSync(
      path.join(protoPath, 'ai-services.proto'),
      {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
      }
    );
    const aiProto = grpc.loadPackageDefinition(aiPackageDefinition) as any;
    
    this.server.addService(
      aiProto.dac.ai.AIService.service,
      this.createAIServiceDefinition()
    );

    // Load Blockchain Service
    const blockchainPackageDefinition = protoLoader.loadSync(
      path.join(protoPath, 'blockchain.proto'),
      {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
      }
    );
    const blockchainProto = grpc.loadPackageDefinition(blockchainPackageDefinition) as any;
    
    this.server.addService(
      blockchainProto.dac.blockchain.BlockchainService.service,
      this.createBlockchainServiceDefinition()
    );

    // Load Property Service
    const propertyPackageDefinition = protoLoader.loadSync(
      path.join(protoPath, 'properties.proto'),
      {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
      }
    );
    const propertyProto = grpc.loadPackageDefinition(propertyPackageDefinition) as any;
    
    this.server.addService(
      propertyProto.dac.properties.PropertyService.service,
      this.createPropertyServiceDefinition()
    );

    // Load Auth Service
    const authPackageDefinition = protoLoader.loadSync(
      path.join(protoPath, 'auth.proto'),
      {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
      }
    );
    const authProto = grpc.loadPackageDefinition(authPackageDefinition) as any;
    
    this.server.addService(
      authProto.dac.auth.AuthService.service,
      this.createAuthServiceDefinition()
    );

    // Load Social Service
    const socialPackageDefinition = protoLoader.loadSync(
      path.join(protoPath, 'social.proto'),
      {
        keepCase: true,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true
      }
    );
    const socialProto = grpc.loadPackageDefinition(socialPackageDefinition) as any;
    
    this.server.addService(
      socialProto.dac.social.SocialService.service,
      this.createSocialServiceDefinition()
    );

    console.log('All gRPC services loaded successfully');
  }

  /**
   * Create AI Service implementation
   */
  private createAIServiceDefinition() {
    return {
      GeneratePropertyValuation: (call: grpc.ServerWritableStream<any, any>) => {
        this.handlePropertyValuation(call);
      },
      GeneratePropertyDescription: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handlePropertyDescription(call, callback);
      },
      AnalyzeProposalContent: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleProposalAnalysis(call, callback);
      },
      ProcessReviewBatch: (call: grpc.ServerDuplexStream<any, any>) => {
        this.handleReviewBatchProcessing(call);
      },
      GetModelHealth: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleModelHealth(call, callback);
      }
    };
  }

  /**
   * Create Blockchain Service implementation
   */
  private createBlockchainServiceDefinition() {
    return {
      DeployContract: (call: grpc.ServerWritableStream<any, any>) => {
        this.handleContractDeployment(call);
      },
      GetContractInfo: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleGetContractInfo(call, callback);
      },
      SendTransaction: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleSendTransaction(call, callback);
      },
      MonitorTransactions: (call: grpc.ServerWritableStream<any, any>) => {
        this.handleTransactionMonitoring(call);
      },
      GetBalance: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleGetBalance(call, callback);
      }
    };
  }

  /**
   * Create Property Service implementation
   */
  private createPropertyServiceDefinition() {
    return {
      CreateProperty: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleCreateProperty(call, callback);
      },
      GetProperty: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleGetProperty(call, callback);
      },
      SearchProperties: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleSearchProperties(call, callback);
      },
      TokenizeProperty: (call: grpc.ServerWritableStream<any, any>) => {
        this.handlePropertyTokenization(call);
      },
      RequestValuation: (call: grpc.ServerWritableStream<any, any>) => {
        this.handleValuationRequest(call);
      }
    };
  }

  /**
   * Create Auth Service implementation
   */
  private createAuthServiceDefinition() {
    return {
      Register: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleUserRegistration(call, callback);
      },
      Login: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleUserLogin(call, callback);
      },
      VerifyToken: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleTokenVerification(call, callback);
      },
      LinkWallet: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleWalletLinking(call, callback);
      },
      SetupMFA: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleMFASetup(call, callback);
      }
    };
  }

  /**
   * Create Social Service implementation
   */
  private createSocialServiceDefinition() {
    return {
      CreateProfile: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleCreateSocialProfile(call, callback);
      },
      CreatePost: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleCreatePost(call, callback);
      },
      GetFeed: (call: grpc.ServerWritableStream<any, any>) => {
        this.handleGetFeed(call);
      },
      SendMessage: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleSendMessage(call, callback);
      },
      FollowUser: (call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) => {
        this.handleFollowUser(call, callback);
      }
    };
  }

  // AI Service Handlers
  private handlePropertyValuation(call: grpc.ServerWritableStream<any, any>) {
    // Stream property valuation progress
    console.log('Streaming property valuation...');
    
    let progress = 0;
    const interval = setInterval(() => {
      progress += 20;
      
      const response = {
        request_id: 'val_' + Date.now(),
        status: progress < 100 ? 2 : 3, // PROCESSING : COMPLETED
        progress_percentage: progress,
        processing_steps: [`Step ${progress/20}: Analyzing property data`]
      };

      call.write(response);

      if (progress >= 100) {
        clearInterval(interval);
        call.end();
      }
    }, 1000);
  }

  private handlePropertyDescription(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    // Generate property description
    const response = {
      description: "Stunning modern home with exceptional features and prime location.",
      key_highlights: ["Open floor plan", "Updated kitchen", "Large backyard"],
      suggested_tags: ["modern", "updated", "family-friendly"],
      seo_title: "Beautiful Modern Home in Prime Location",
      seo_description: "Discover this exceptional property with modern amenities."
    };
    
    callback(null, response);
  }

  private handleProposalAnalysis(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    // Analyze governance proposal
    const response = {
      analysis: {
        feasibility_score: 0.85,
        complexity_score: 0.6,
        stakeholder_alignment: 0.78,
        key_themes: ["infrastructure", "community", "sustainability"],
        potential_issues: ["Budget constraints", "Timeline concerns"]
      },
      recommendations: ["Consider phased implementation", "Engage stakeholders early"],
      risks: [{
        risk_category: "Financial",
        risk_description: "Budget may exceed allocated funds",
        level: 2, // MEDIUM
        mitigation_strategies: ["Seek additional funding", "Reduce scope"]
      }],
      impacts: [{
        impact_area: "Community",
        description: "Positive impact on local residents",
        level: 3, // SIGNIFICANT
        affected_stakeholders: ["Residents", "Local businesses"]
      }]
    };
    
    callback(null, response);
  }

  private handleReviewBatchProcessing(call: grpc.ServerDuplexStream<any, any>) {
    // Process review batches
    call.on('data', (request) => {
      console.log('Processing review batch:', request.reviews?.length || 0, 'reviews');
      
      const response = {
        batch_id: 'batch_' + Date.now(),
        status: 3, // COMPLETED
        progress_percentage: 100,
        results: request.reviews?.map((review: any, index: number) => ({
          review_id: review.id,
          sentiment: {
            sentiment_score: Math.random() * 2 - 1, // -1 to 1
            sentiment_label: Math.random() > 0.5 ? "positive" : "negative",
            confidence: Math.random() * 0.3 + 0.7, // 0.7 to 1.0
            emotions: [
              { emotion: "satisfaction", score: Math.random() },
              { emotion: "frustration", score: Math.random() }
            ]
          },
          key_topics: ["service", "quality", "price"],
          issues_identified: index % 3 === 0 ? ["slow response"] : [],
          quality_score: Math.random() * 0.4 + 0.6, // 0.6 to 1.0
          category_classification: "general"
        })) || []
      };
      
      call.write(response);
    });

    call.on('end', () => {
      call.end();
    });
  }

  private handleModelHealth(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    const response = {
      models: [
        {
          model_name: "gpt-4o",
          version: "2024-05-13",
          status: 1, // HEALTHY
          response_time: 1.2,
          error_rate: 0.01,
          last_error: ""
        },
        {
          model_name: "claude-3-sonnet",
          version: "20240229",
          status: 1, // HEALTHY
          response_time: 1.5,
          error_rate: 0.02,
          last_error: ""
        }
      ],
      system_health: {
        cpu_usage: 45.5,
        memory_usage: 67.2,
        disk_usage: 23.1,
        active_requests: 12,
        average_response_time: 1.35
      },
      last_check: new Date()
    };
    
    callback(null, response);
  }

  // Blockchain Service Handlers
  private handleContractDeployment(call: grpc.ServerWritableStream<any, any>) {
    console.log('Deploying smart contract...');
    
    let progress = 0;
    const steps = ['Compiling', 'Validating', 'Deploying', 'Verifying', 'Completed'];
    
    const interval = setInterval(() => {
      progress += 20;
      const stepIndex = Math.floor(progress / 20) - 1;
      
      const response = {
        deployment_id: 'deploy_' + Date.now(),
        status: progress < 100 ? 2 : 5, // DEPLOYING : COMPLETED
        progress_percentage: progress,
        deployment_steps: [steps[stepIndex] || steps[steps.length - 1]]
      };

      if (progress >= 100) {
        response.contract_address = '0x' + Math.random().toString(16).substr(2, 40);
        response.transaction_hash = '0x' + Math.random().toString(16).substr(2, 64);
      }

      call.write(response);

      if (progress >= 100) {
        clearInterval(interval);
        call.end();
      }
    }, 1500);
  }

  private handleGetContractInfo(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    const response = {
      address: call.request.contract_address,
      name: "PrometheaCore",
      abi: JSON.stringify([]), // Simplified
      deployer: "0x" + Math.random().toString(16).substr(2, 40),
      deployed_at: new Date(),
      network: "polygon-zkevm",
      verification_status: "verified"
    };
    
    callback(null, response);
  }

  private handleSendTransaction(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    const response = {
      success: true,
      transaction_hash: '0x' + Math.random().toString(16).substr(2, 64),
      nonce: String(Math.floor(Math.random() * 1000)),
      status: "pending"
    };
    
    callback(null, response);
  }

  private handleTransactionMonitoring(call: grpc.ServerWritableStream<any, any>) {
    console.log('Starting transaction monitoring...');
    
    const interval = setInterval(() => {
      const event = {
        type: Math.random() > 0.5 ? 2 : 1, // CONFIRMED : PENDING
        transaction: {
          hash: '0x' + Math.random().toString(16).substr(2, 64),
          from_address: '0x' + Math.random().toString(16).substr(2, 40),
          to_address: '0x' + Math.random().toString(16).substr(2, 40),
          value: String(Math.floor(Math.random() * 1000000)),
          status: "confirmed"
        },
        timestamp: new Date(),
        network: "polygon-zkevm"
      };
      
      call.write(event);
    }, 3000);

    call.on('cancelled', () => {
      clearInterval(interval);
    });
  }

  private handleGetBalance(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    const response = {
      balance: String(Math.floor(Math.random() * 10000000000)),
      formatted_balance: (Math.random() * 100).toFixed(4),
      currency: "ETH",
      block_number: String(Math.floor(Math.random() * 20000000))
    };
    
    callback(null, response);
  }

  // Property Service Handlers (simplified implementations)
  private handleCreateProperty(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    console.log('Creating property via gRPC...');
    callback(null, { id: Math.floor(Math.random() * 10000), title: call.request.title });
  }

  private handleGetProperty(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { id: call.request.id, title: "Sample Property" });
  }

  private handleSearchProperties(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { properties: [], total_count: 0 });
  }

  private handlePropertyTokenization(call: grpc.ServerWritableStream<any, any>) {
    console.log('Tokenizing property...');
    call.write({ status: 2, progress_percentage: 50 });
    setTimeout(() => {
      call.write({ status: 3, progress_percentage: 100, token_contract_address: '0x123...' });
      call.end();
    }, 2000);
  }

  private handleValuationRequest(call: grpc.ServerWritableStream<any, any>) {
    console.log('Processing valuation request...');
    call.write({ status: 2, progress_percentage: 75 });
    setTimeout(() => {
      call.write({ status: 3, progress_percentage: 100 });
      call.end();
    }, 1500);
  }

  // Auth Service Handlers (simplified implementations)
  private handleUserRegistration(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { success: true, access_token: 'token_123', user: { id: 1, username: call.request.username } });
  }

  private handleUserLogin(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { success: true, access_token: 'token_456', user: { id: 1, username: call.request.identifier } });
  }

  private handleTokenVerification(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { valid: true, user_id: 1, permissions: ['read', 'write'] });
  }

  private handleWalletLinking(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { success: true, wallet_address: call.request.wallet_address });
  }

  private handleMFASetup(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { success: true, secret_key: 'SECRET123', qr_code_url: 'https://example.com/qr' });
  }

  // Social Service Handlers (simplified implementations)
  private handleCreateSocialProfile(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { profile_id: 'profile_123', pseudonym: call.request.pseudonym });
  }

  private handleCreatePost(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { post_id: 'post_123', content: call.request.content });
  }

  private handleGetFeed(call: grpc.ServerWritableStream<any, any>) {
    console.log('Streaming social feed...');
    const posts = [
      { post_id: 'post_1', content: 'Hello DAC community!' },
      { post_id: 'post_2', content: 'Excited about the new governance proposals!' }
    ];
    
    posts.forEach(post => call.write(post));
    call.end();
  }

  private handleSendMessage(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { 
      success: true, 
      message: { message_id: 'msg_123', content: call.request.content },
      conversation_id: 'conv_456'
    });
  }

  private handleFollowUser(call: grpc.ServerUnaryCall<any, any>, callback: grpc.sendUnaryData<any>) {
    callback(null, { success: true, status: 1, message: 'Now following user' });
  }

  /**
   * Stop the gRPC server
   */
  async stop() {
    return new Promise<void>((resolve) => {
      this.server.tryShutdown((error) => {
        if (error) {
          console.error('Error stopping gRPC server:', error);
        } else {
          console.log('gRPC server stopped successfully');
        }
        resolve();
      });
    });
  }

  /**
   * Get server status
   */
  getStatus() {
    return {
      running: true,
      port: this.port,
      services: [
        'GovernanceService',
        'AIService', 
        'BlockchainService',
        'PropertyService',
        'AuthService',
        'SocialService'
      ]
    };
  }
}

// Export singleton instance
export const grpcServer = new GRPCServer();